fix: storybook docs

--- a/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Platform Based Styles
 
-- This allows you to easily create styles that are specific to a particular platform that is, Web, iOS, or Android.
+This allows you to easily create styles that are specific to a particular platform that is, Web, iOS, or Android.
 
 ```jsx
 const Box = styled(View, {
