--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -4,11 +4,11 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Responsive styles
 
-- Dank provides support for responsive styles through the use of media queries.
+Dank provides support for responsive styles through the use of media queries.
 
 ## Configure your breakpoints
 
-- To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options.
+To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options.
 
 ```jsx
 mediaQueries: {
@@ -22,7 +22,7 @@ mediaQueries: {
 
 ### Using breakpoints in styled function
 
-- Once configured, you can apply different styles at different breatkpoints
+Once configured, you can apply different styles at different breatkpoints
 
 ```jsx
 const MyButton = styled(Pressable, {
