--- a/example/storybook/src/configuration/Breakpoints/index.stories.mdx
+++ b/example/storybook/src/configuration/Breakpoints/index.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 ## Configure your Breakpoints
 
-- To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options. Breakpoints are defined in `mediaQueries` scale.
+To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options. Breakpoints are defined in `mediaQueries` scale.
 
 ```jsx
 mediaQueries: {
