--- a/example/storybook/src/getting-started/TypeScript/index.stories.mdx
+++ b/example/storybook/src/getting-started/TypeScript/index.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # TypeScript (Add Features and Intro)
 
-- To enable TypeScript for aliases and tokens, we’ll follow below steps:
+To enable TypeScript for aliases and tokens, we’ll follow below steps:
 
 ```jsx
 // Gluestack config
@@ -40,8 +40,9 @@ declare module '@gluestack/ui-styled' {
 }
 ```
 
-- `aliases`: Define any prop you want to expand style value, the key is alias and the value is style property which you want to resolve that alias.
-- `tokens`: Tokens in Design are the values or constants required to construct a design system. These values can represent **spacing**, **color**, **typography** etc. Design tokens help to achieve consistency in building user interfaces across all platforms.
+`aliases`: Define any prop you want to expand style value, the key is alias and the value is style property which you want to resolve that alias.
+
+`tokens`: Tokens in Design are the values or constants required to construct a design system. These values can represent **spacing**, **color**, **typography** etc. Design tokens help to achieve consistency in building user interfaces across all platforms.
 
 ### Steps to define config:
 
@@ -56,18 +57,18 @@ const config = {
 
 why type assertion?
 
-- Because we need information about the type of value to define the type of aliases and their corresponding tokens.
-  Example: We have alias `bg` which will be mapped to the `colors` token and has style property `backgroundColor`, so we have an internal property map for tokens (i.e. `backgroundColor` will map to `colors` internally) through which we will eventually define which alias will map to which token.
+Because we need information about the type of value to define the type of aliases and their corresponding tokens.
+Example: We have alias `bg` which will be mapped to the `colors` token and has style property `backgroundColor`, so we have an internal property map for tokens (i.e. `backgroundColor` will map to `colors` internally) through which we will eventually define which alias will map to which token.
 
 1. Get the type of config using `typeof` operator.
 2. Extend the internal styled config interface `ICustomConfig`
 
 ### Anatomy of utility props
 
-- Utility props follow below patterns:
+Utility props follow below patterns:
 
 ![Screenshot 2023-01-10 at 10.57.18 AM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/abbd5a11-b7d2-486b-a4af-b7873af3727f/Screenshot_2023-01-10_at_10.57.18_AM.png)
 
-- Utility props implemented in the above pattern only define some standards and also limit the number of types generated.
+Utility props implemented in the above pattern only define some standards and also limit the number of types generated.
 
 > Note: You can define them in any of the patterns you want, but above approach is recommended to follow.
