--- a/example/storybook/src/api/PropsPassing/index.stories.mdx
+++ b/example/storybook/src/api/PropsPassing/index.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/Legend Animation" />;
+<Meta title="api/Props Passing" />;
 
 import { CodeBlock, AppProvider } from '@gluestack/design-system';
 
 <Canvas>
-  <Story id="api-stories-legendanimation--legendanimation" />
+  <Story id="api-stories-propspassing--propspassing" />
 </Canvas>
