fix: merge conflict resolved

--- a/example/storybook/src/overview/Indroduction/index.stories.mdx
+++ b/example/storybook/src/overview/Indroduction/index.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
+Dank is a performant styling CSS-in-JS library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
 
 ## Why we built dank.style?
 
