fix: content changes

--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/ColorMode Based Styles" />;
+<Meta title="api/ColorMode Based Styles" />
 
 import { CodeBlock, AppProvider } from '@gluestack/design-system';
 
