--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -4,13 +4,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Specificity
 
-<br />
-<br />
-<br />
+Specificity order
 
-## API
-
-<br />
+### API
 
 ```jsx
 import React from 'react';
@@ -60,7 +56,7 @@ const StyledButton = styled(
 );
 ```
 
-## Usage
+### Usage
 
 <Canvas>
   <Story id="api-stories-specificity--specificity" />
