--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -2,7 +2,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Babel Plugins" />
 
-## @dank-style/babel-plugin-styled-resolver
+# Babel plugins
+
+### @dank-style/babel-plugin-styled-resolver
 
 @dank-style/babel-plugin-styled-resolver transpiles your `styled` function calls and resolves the `component styling` in build time. It also generates all the `CSS rules` and style ids based on which these CSS styles are applied on the component. Doing this saves tons of time on runtime because all your style calculation is already done and all your app has to do is to inject this style into a style tag and viola! All your styles appear instantaneously. This helps us to improve the performance of the apps 5-6 times.
 
