feat: meta data block in mdx

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -2,6 +2,13 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Installation" />
 
+---
+
+title: "Installation | Dank"
+description: "A Quick Installation guide for Dank"
+
+---
+
 # Installation
 
 - To install our library, you can use npm or yarn package manager.
