--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -2,6 +2,13 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Styled" />
 
+---
+
+title: "styled | Dank"
+description: "With styled, you can easily extend existing components and make them customizable and themeable."
+
+---
+
 # styled()
 
 - With our **`styled`**function, you can easily extend existing components and make them customizable and themeable.
