--- a/example/storybook/src/overview/Indroduction/index.stories.mdx
+++ b/example/storybook/src/overview/Indroduction/index.stories.mdx
@@ -2,6 +2,13 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Overview/Introduction" />
 
+---
+
+title: "Introduction"
+description: "Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner."
+
+---
+
 # Introduction
 
 Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
