feat: meta data block in mdx

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -4,8 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 ---
 
-title: "Installation | Dank"
-description: "A Quick Installation guide for Dank"
+title: Installation | Dank
+description: A Quick Installation guide for Dank
 
 ---
 
