--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -11,8 +11,8 @@ import {
 
 ---
 
-title: "styled | Dank"
-description: "With styled, you can easily extend existing components and make them customizable and themeable."
+title: styled | Dank
+description: With styled, you can easily extend existing components and make them customizable and themeable.
 
 ---
 
