--- a/example/storybook/src/overview/Indroduction/index.stories.mdx
+++ b/example/storybook/src/overview/Indroduction/index.stories.mdx
@@ -4,8 +4,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 ---
 
-title: "Introduction"
-description: "Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner."
+title: Introduction
+description: Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
 
 ---
 
