feat: meta data block in mdx

--- a/example/storybook/src/advanced/Architecture/index.stories.mdx
+++ b/example/storybook/src/advanced/Architecture/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Architecture | Dank
+description: Internal workings of Dank.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Architecture" />
