--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Babel Plugins | Dank
+description: All the Babel plugins Dank provides for its ecosystem.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Babel Plugins" />
