--- a/example/storybook/src/advanced/Specificity/index.stories.mdx
+++ b/example/storybook/src/advanced/Specificity/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Specificity | Dank
+description: A deep dive into the complexities of specificties and how it is handled in Dank.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="advanced/Specificity" />
