--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: ColorMode Based Styles | Dank
+description: A guide for color mode dependent styles inside the component config .
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/ColorMode Based Styles" />
