--- a/example/storybook/src/api/OverridingStyles/index.stories.mdx
+++ b/example/storybook/src/api/OverridingStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Overriding styles with sx | Dank
+description: Dank supports the use of an **`sx`** prop to override styles.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Overriding Styles with sx" />
