--- a/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Platform Based Styles | Dank
+description: Writing platform based styles in Dank
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Platform Based Styles" />
