--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Responsive Styles | Dank
+description: Dank provides support for responsive styles through the use of media queries.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Responsive Styles" />
