--- a/example/storybook/src/api/StateBasesStyles/index.stories.mdx
+++ b/example/storybook/src/api/StateBasesStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: State based styling | Dank
+description: How to write state based styles in Dank.
+---
+
 import { Canvas, Meta, Story, Source } from '@storybook/addon-docs';
 
 <Meta title="api/State Bases Styles" />
