--- a/example/storybook/src/configuration/Breakpoints/index.stories.mdx
+++ b/example/storybook/src/configuration/Breakpoints/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Breakpoints | Dank
+description: How to create and use breakpoints in Dank.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="configuration/Breakpoints" />
