--- a/example/storybook/src/configuration/SSR/index.stories.mdx
+++ b/example/storybook/src/configuration/SSR/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: SSR | Dank
+description: Dank provides support for server-side rendering (SSR) by exporting a flush function.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="configuration/SSR" />
