--- a/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
+++ b/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Tokens | Dank
+description: Dank uses "tokens" to store design-related values such as colors, typography, spacing, and more.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="configuration/Theme Tokens" />
