--- a/example/storybook/src/getting-started/TypeScript/index.stories.mdx
+++ b/example/storybook/src/getting-started/TypeScript/index.stories.mdx
@@ -1,8 +1,13 @@
+---
+title: TypeScript | Dank
+description: A guide to enable TypeScript for aliases and tokens.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/TypeScript" />
 
-# TypeScript (Add Features and Intro)
+# TypeScript
 
 To enable TypeScript for aliases and tokens, we’ll follow below steps:
 
