--- a/example/storybook/src/overview/API/index.stories.mdx
+++ b/example/storybook/src/overview/API/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: API
+description: A brief about all the API that you get from Dank.
+---
+
 import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Overview/API" />
