--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Performance
+description: Know about how performant is dank.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Overview/Performance" />
