--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Descendant Styling | Dank
+description: A guide on how to style the descendants of a component.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Descendants Styles" />
