--- a/example/storybook/src/api/PropertyResolver/index.stories.mdx
+++ b/example/storybook/src/api/PropertyResolver/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Property Resolver | Dank
+description: Dank-style allows you to modify the resolution of value of any style property that you pass by providing a callback function against any style property.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Property Resolver" />
