--- a/example/storybook/src/api/UtilityProps/index.stories.mdx
+++ b/example/storybook/src/api/UtilityProps/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Utility Props | Dank
+description: Writing inline styles with Utlity Props.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Utility props" />
