--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Variants | Dank
+description: How variants works in Dank.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Variants" />
