--- a/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
+++ b/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: StyledProvider | Dank
+description: Dank Style exports a StyledProvider component that can be used to configure the library.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/StyledProvider" />
