--- a/example/storybook/src/api/PropertyResolver/index.stories.mdx
+++ b/example/storybook/src/api/PropertyResolver/index.stories.mdx
@@ -104,7 +104,7 @@ const MyButton = styled(
   - **resolver**: A function that takes in a token value and returns the corresponding output.
 - **Returns:** String or Numerical value that needs to be passed to the specific property inside the style prop of that component.
 
-> **Note**: The Property Resolver is locally scoped so if you define it in a components config then it will only modify that property value for that particular component. If you need this functionality globally you can define the same in dank.config.js/ts file as shown below.
+> **Note:** The Property Resolver is locally scoped so if you define it in a components config then it will only modify that property value for that particular component. If you need this functionality globally you can define the same in dank.config.js/ts file as shown below.
 
 ```tsx
 export const config = {
