--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -4,7 +4,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Installation
 
-To install Dank, you can use npm or yarn package manager.
+To get started with dank, you'll need to install it using either npm or yarn. These are popular package managers for JavaScript, and either one should work fine.
 
 ```bash
 # using npm
@@ -16,7 +16,7 @@ npm install @dank-style/react
 yarn add @dank-style/react
 ```
 
-Once the library is installed, you can import it in your project by using the following line of code.
+Once you've installed dank, you're ready to start using it in your project. you can import it in your project by using the following line of code.
 
 ```jsx
 import { styled, StyledProvider } from '@dank-style/react';
