feat: integrated code preview component

--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -53,6 +53,7 @@ We can create any key in the descendants object and pass style as a value, to us
       argsType: {
         bg: {
           control: 'input',
+          default: '$primary600',
         },
       },
     }}
