--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -2,6 +2,12 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Variants" />
 
+import { styled, StyledProvider } from '@dank-style/react';
+import { Pressable, Text } from 'react-native';
+import { Button, AppProvider, CodePreview } from '@gluestack/design-system';
+import { config } from '../../components/nb.config';
+import { useState } from 'react';
+
 # Variants
 
 - Dank allows you to easily create different variations of a component with different styles.
@@ -12,126 +18,292 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
   - You can add a new variant by passing `variants` key in `styled`. There are no restrictions on the number of variations that may be incorporated.
   - A variant accepts the same style object as the sx style.
 
-    ```jsx
-    const StyledButtonVariant = styled(Pressable, {
-      p: '$3',
-      variants: {
-        variant: {
-          solid: {
-            bg: '$primary600',
+<AppProvider>
+  <CodePreview
+    metaData={{
+      scope: {
+        styled,
+        Text,
+        Pressable,
+        Provider: StyledProvider,
+        config,
+        useState,
+      },
+      code: `
+        function Button() {
+          const StyledButtonVariant = styled(Pressable, {
+          px: '$3.5',
+          py: '$2.5',
+          rounded: '$md',
+            variants: {
+              variant: {
+                solid: {
+                  bg: '$primary600',
+                },
+                subtle: {
+                  bg: '$primary300'
+                }
+              },
+            },
+          });
+          const StyledButtonText = styled(
+          Text,
+          {
+            color: '$textDark50',
+            fontWeight: '400',
           },
+          { ancestorStyle: ['_text'] }
+        );
+        return (
+          <Provider config={config}>
+            <StyledButtonVariant {...props}>
+              <StyledButtonText>Button</StyledButtonText>
+            </StyledButtonVariant>
+          </Provider>
+        );
+      }`,
+      argsType: {
+        variant: {
+          control: 'select',
+          options: ['solid', 'subtle'],
+          default: 'solid',
         },
       },
-    });
-
-    () => <StyledButtonVariant variant="solid">Button</StyledButtonVariant>;
-    ```
+    }}
+  />
+</AppProvider>
 
 - Multiple variants
 
-  ```jsx
-  const StyledButtonVariant = styled(Pressable, {
-    p: '$3',
-    variants: {
-      variant: {
-        solid: {
-          bg: '$primary600',
+<AppProvider>
+  <CodePreview
+    metaData={{
+      scope: {
+        styled,
+        Text,
+        Pressable,
+        Provider: StyledProvider,
+        config,
+        useState,
+      },
+      code: `
+        function Button() {
+          const StyledButtonVariant = styled(Pressable, {
+            p: '$3',
+          rounded: '$md',
+            variants: {
+              variant: {
+                solid: {
+                  bg: '$primary600',
+                },
+                subtle: {
+                  bg: '$primary200',
+                  _text: {
+                  color: '$textDark600'
+                  }
+                },
+              },
+              size: {
+                xs: {
+                  px: '$3',
+                  py: '$2',
+                },
+                sm: {
+                  px: '$3.5',
+                  py: '$2.5',
+                },
+              },
+            },
+          }, {
+          descendantStyle: ['_text']
+        });
+          const StyledButtonText = styled(
+          Text,
+          {
+            color: '$textDark50',
+            fontWeight: '400',
+          },
+          { ancestorStyle: ['_text'] }
+        );
+        return (
+          <Provider config={config}>
+            <StyledButtonVariant {...props}>
+              <StyledButtonText>Button</StyledButtonText>
+            </StyledButtonVariant>
+          </Provider>
+        );
+      }`,
+      argsType: {
+        variant: {
+          control: 'select',
+          options: ['solid', 'subtle'],
+          default: 'solid',
         },
-        subtle: {
-          bg: '$primary200',
+        size: {
+          control: 'select',
+          options: ['xs', 'sm'],
+          default: 'xs',
         },
       },
-      size: {
-        xs: {
-          px: '$3',
-          py: '$2',
-        },
-        sm: {
-          px: '$3',
-          py: '$2',
-        },
-      },
-    },
-  });
-
-  () => (
-    <StyledButtonVariant variant="solid" size="sm">
-      Button
-    </StyledButtonVariant>
-  );
-  ```
+    }}
+  />
+</AppProvider>
 
 - Boolean variants
 
-  ```jsx
-  const StyledButtonVariant = styled(Pressable, {
-    p: '$3',
-    variants: {
-      variant: {
-        solid: {
-          bg: '$primary600',
+<AppProvider>
+  <CodePreview
+    metaData={{
+      scope: {
+        styled,
+        Text,
+        Pressable,
+        Provider: StyledProvider,
+        config,
+        useState,
+      },
+      code: `
+        function Button() {
+        const StyledButtonVariant = styled(Pressable, {
+          px: '$3.5',
+          py: '$2.5',
+          rounded: '$md',
+          variants: {
+            variant: {
+              solid: {
+                bg: '$primary600',
+              },
+              subtle: {
+                bg: '$primary400',
+              },
+            },
+            outlined: {
+              true: {
+                borderColor: '$primary800',
+                borderWidth: '$1',
+                bg: 'transparent'
+              },
+            },
+          },
+        });
+        const StyledButtonText = styled(
+          Text,
+          {
+            color: '$textDark50',
+            fontWeight: '400',
+          },
+          { ancestorStyle: ['_text'] }
+        );
+        return (
+          <Provider config={config}>
+            <StyledButtonVariant {...props}>
+              <StyledButtonText>Button</StyledButtonText>
+            </StyledButtonVariant>
+          </Provider>
+        );
+      }`,
+      argsType: {
+        variant: {
+          control: 'select',
+          options: ['solid', 'subtle'],
+          default: 'solid',
+        },
+        outlined: {
+          control: 'boolean',
+          default: false,
         },
       },
-      outlined: {
-        true: {
-          borderColor: '$lightgray200',
-        },
-      },
-    },
-  });
-
-  () => (
-    <StyledButtonVariant variant="solid" outlined>
-      Button
-    </StyledButtonVariant>
-  );
-  ```
+    }}
+  />
+</AppProvider>
 
 - Compound variants
 
   - The compoundVariants feature allows you to set styles for a variant based on a combination of other variants. This means that you can specify different styles for a variant depending on the values of other variants that are being used.
   - compoundVariants is an array of objects that contain a `value` key and variants. The `value` key accepts the same style object as the sx style.
 
-  ```jsx
-  const StyledButtonVariant = styled(Pressable, {
-    p: '$3',
-    variants: {
-      variant: {
-        solid: {
-          bg: '$primary600',
-        },
-        subtle: {
-          bg: '$primary200',
-        },
+<AppProvider>
+  <CodePreview
+    metaData={{
+      scope: {
+        styled,
+        Text,
+        Pressable,
+        Provider: StyledProvider,
+        config,
+        useState,
       },
-      size: {
-        xs: {
-          px: '$3',
-          py: '$2',
-        },
-        sm: {
-          px: '$3',
-          py: '$2',
-        },
-      },
-    },
-    compoundVariants: [
-      {
-        variant: 'solid',
-        size: 'sm',
-        value: {
-          'borderWidth': 2,
-          ':hover': {
-            bg: '$blue400',
+      code: `
+        function Button() {
+        const StyledButtonVariant = styled(Pressable, {
+          p: '$3',
+          rounded: '$md',
+          variants: {
+            variant: {
+              solid: {
+                bg: '$primary600',
+              },
+              subtle: {
+                bg: '$primary200',
+                _text: {
+                  color: '$textDark600'
+                }
+              },
+            },
+            size: {
+              xs: {
+                px: '$3',
+                py: '$2',
+              },
+              sm: {
+                px: '$3.5',
+                py: '$2.5',
+              },
+            },
           },
+          compoundVariants: [
+            {
+              variant: 'solid',
+              size: 'sm',
+              value: {
+                'borderWidth': '$2',
+                ':hover': {
+                  bg: '$primary700',
+                },
+              },
+            },
+          ],
+        }, {
+          descendantStyle: ['_text']
+        });
+        const StyledButtonText = styled(
+          Text,
+          {
+            color: '$textDark50',
+            fontWeight: '400',
+          },
+          { ancestorStyle: ['_text'] }
+        );
+        return (
+          <Provider config={config}>
+            <StyledButtonVariant {...props} states={{hover: true}}>
+              <StyledButtonText>Button</StyledButtonText>
+            </StyledButtonVariant>
+          </Provider>
+        );
+      }`,
+      argsType: {
+        variant: {
+          control: 'select',
+          options: ['solid', 'subtle'],
+          default: 'solid',
+        },
+        size: {
+          control: 'select',
+          options: ['xs', 'sm'],
+          default: 'sm',
         },
       },
-    ],
-  });
-
-  () => (
-    <StyledButtonVariant variant="solid" size="sm">
-      Button
-    </StyledButtonVariant>
-  );
-  ```
+    }}
+  />
+</AppProvider>
