fix: descendant style imports

--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -10,7 +10,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { Pressable, Text } from 'react-native';
 import { Button, AppProvider, CodePreview } from '@gluestack/design-system';
 import { config } from '../../components/nb.config';
-import { styled } from '@dank-style/react';
+import { styled, StyledProvider } from '@dank-style/react';
 
 # Descendant Styling (Context based)
 
