--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -17,8 +17,8 @@ Dank is different from other CSS-in-JS libraries like Glamour, Emotion, Styled-c
 
 Dank originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
 
-- [dank.style](http://dank.style) - The high-performing and universal CSS-in-JS library.
-- [universa11y.dev](http://universa11y.dev) (coming soon) - A collection of HOCs that adds accessibility to low-level [dank.style](http://dank.style) components or any component with the same prop type.
+- [dank.style](https://dank.style) - The high-performing and universal CSS-in-JS library.
+- [universa11y.dev](https://universa11y.dev) (coming soon) - A collection of HOCs that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type.
 - gluestack-ui (coming soon) - A set of ready-to-use universal components that can be added to any project and styled to fit your needs. You can even customize the components as desired.
 
 ## But aren’t React Native and React Native Web sufficient?
