feat: docs improvements

--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-Dank is a high-performing styling CSS-in-JS library for React and React Native that allows developers to create scalable and maintainable styles quickly and effectively.
+Dank is a high-performing styling **CSS-in-JS** library for React and React Native that allows developers to create scalable and maintainable styles quickly and effectively.
 
 ## Why we built dank.style?
 
