fix: import change

--- a/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
+++ b/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
@@ -18,7 +18,7 @@ You can use the **`StyledProvider`** component to set global options, such as br
 Here is an example of how you can use the **`StyledProvider`** component to configure the library:
 
 ```jsx
-import { StyledProvider } from 'dank-style;
+import { StyledProvider } from '@dank-style/react;
 
 const config = {
   breakpoints: {
