--- a/example/storybook/src/configuration/SSR/index.stories.mdx
+++ b/example/storybook/src/configuration/SSR/index.stories.mdx
@@ -16,7 +16,7 @@ To use the **`flush`** function, you need to import it and call it in the **`_do
 Here is an example of how you can use the **`flush`** function in the **`_document.js`** file:
 
 ```jsx
-import { flush } from 'dank-style';
+import { flush } from '@dank-style/react';
 
 class MyDocument extends Document {
   static async getInitialProps(ctx) {
