--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -19,7 +19,7 @@ Dank provides support for responsive styles through the use of media queries.
 
 ## Configure your breakpoints
 
-To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options.
+To configure breakpoints in `@dank-style/react`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options.
 
 ```jsx
 mediaQueries: {
@@ -48,7 +48,7 @@ Once configured, you can apply different styles at different breatkpoints
         useState,
       },
       code: `
-          function Button() {
+          function App() {
             const StyledButton = styled(Pressable, {
               'bg': '$red500',
               'p': '$3',
@@ -105,29 +105,6 @@ Once configured, you can apply different styles at different breatkpoints
     }}
   />
 </AppProvider>
-
-```jsx
-const MyButton = styled(Pressable, {
-  'bg': '$red500',
-  'p': '$3',
-  'shadow': '$4',
-  '@md': {
-    'bg': '$blue500',
-    ':hover': {
-      'bg': '$green500',
-      ':focus': {
-        bg: 'purple',
-      },
-    },
-    '_dark': {
-      bg: '$red500',
-    },
-    '_light': {
-      bg: '$blue500',
-    },
-  },
-});
-```
 
 > Note: The `@` symbol is used to indicate a media query. The `@` symbol is followed by the name of the breakpoint you want to apply the styles to.
 > Note: The same API can be used in `sx` prop to override styles inline.
