--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -33,7 +33,7 @@ Using variant props in a UI component library allows for more flexibility and re
         useState,
       },
       code: `
-        function Button() {
+        function App() {
           const StyledButtonVariant = styled(Pressable, {
           px: '$3.5',
           py: '$2.5',
@@ -90,7 +90,7 @@ Using variant props in a UI component library allows for more flexibility and re
         useState,
       },
       code: `
-        function Button() {
+        function App() {
           const StyledButtonVariant = styled(Pressable, {
             p: '$3',
           rounded: '$md',
@@ -166,7 +166,7 @@ Using variant props in a UI component library allows for more flexibility and re
         useState,
       },
       code: `
-        function Button() {
+        function App() {
         const StyledButtonVariant = styled(Pressable, {
           px: '$3.5',
           py: '$2.5',
@@ -237,7 +237,7 @@ Using variant props in a UI component library allows for more flexibility and re
         useState,
       },
       code: `
-        function Button() {
+        function App() {
         const StyledButtonVariant = styled(Pressable, {
           p: '$3',
           rounded: '$md',
