--- a/example/storybook/src/components/InputGroup/index.stories.mdx
+++ b/example/storybook/src/components/InputGroup/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/InputGroup" />
+<Meta title="components/Input" />
 
 # InputGroup
 
@@ -17,5 +17,5 @@ import { InputGroup } from '@universa11y/input';
 ## Props
 
 <Canvas style={{ height: 200 }}>
-  <Story id="components-stories-input--input-group-story" />
+  <Story id="components-stories-inputgroup--input-group-story" />
 </Canvas>
