--- a/example/storybook/src/components/Overlay/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Overlay" />
+<Meta title="components/OverlayComp" />
 
 # Overlay
 
